--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "whatsapp-vue2",
-  "version": "0.1.0",
+  "name": "whatsapp-vue",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-emoji-picker": "^1.0.1"
